--- a/configs/config.json
+++ b/configs/config.json
@@ -1,16 +1,17 @@
 {
-    "your_account1": "3246357465",
-    "your_password1": "000000",
-    "start_time1": "10:00",
+    "your_account1": "4032330085",
+    "your_password1": "czl522623",
+    "start_time1": "08:00",
     "end_time1": "14:00",
-    "your_account2": "9675685474",
+    "your_account2": "4032330004",
     "your_password2": "000000",
     "start_time2": "15:00",
     "end_time2": "21:00",
     "your_preferroom": "三楼理科书库",
-    "your_prefersit": "314",
+    "your_prefersit": "30",
     "your_cdkey":"996ac13d84"
 }
+
 
 
 
