--- a/.github/workflows/final_model.yml
+++ b/.github/workflows/final_model.yml
@@ -3,7 +3,7 @@ name: Run Script Daily at 6:00 seat_v6
 on:
   schedule:
     # 北京时间 6:00 = UTC 时间 22:00（前一天）
-    - cron: '53 21 * * *'
+    - cron: '00 22 * * *'
   workflow_dispatch:
 
 jobs:
@@ -27,22 +27,10 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Install Google Chrome
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y wget unzip
-          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo apt install -y ./google-chrome-stable_current_amd64.deb
+        uses: browser-actions/setup-chrome@v1
 
       - name: Install ChromeDriver
-        run: |
-          pip install webdriver-manager
-          python3 -c "
-          from webdriver_manager.chrome import ChromeDriverManager
-          import shutil, os
-          driver_path = ChromeDriverManager().install()
-          shutil.copy2(driver_path, '/usr/local/bin/chromedriver')
-          os.chmod('/usr/local/bin/chromedriver', 0o755)
-          "
+        uses: nanasess/setup-chromedriver@v2
 
       - name: Install fonts for headless browser
         run: sudo apt-get install -y fonts-noto-cjk fonts-noto-color-emoji
