--- a/configs/config.json
+++ b/configs/config.json
@@ -3,7 +3,7 @@
     "your_password1": "czl522623",
     "start_time1": "08:00",
     "end_time1": "14:00",
-    "your_account2": "4032330002",
+    "your_account2": "0",
     "your_password2": "000000",
     "start_time2": "15:00",
     "end_time2": "21:00",
@@ -11,6 +11,7 @@
     "your_prefersit": "45",
     "your_cdkey":"996ac13d84"
 }
+
 
 
 
